// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseEndpoint custom hosted url as ip in internet 1`] = `
Object {
  "clusterBaseUrl": "http://13.228.39.83:4466",
  "clusterName": "default",
  "isPrivate": true,
  "local": false,
  "service": "default",
  "shared": false,
  "stage": "default",
  "workspaceSlug": null,
}
`;

exports[`parseEndpoint custom hosted url in internet 1`] = `
Object {
  "clusterBaseUrl": "https://api-prisma.divyendusingh.com",
  "clusterName": "default",
  "isPrivate": true,
  "local": false,
  "service": "zebra-4069",
  "shared": false,
  "stage": "dev",
  "workspaceSlug": null,
}
`;

exports[`parseEndpoint local behind a proxy 1`] = `
Object {
  "clusterBaseUrl": "http://local.dev",
  "clusterName": "default",
  "isPrivate": true,
  "local": false,
  "service": "default",
  "shared": false,
  "stage": "default",
  "workspaceSlug": null,
}
`;

exports[`parseEndpoint private url 1`] = `
Object {
  "clusterBaseUrl": "https://test1_workspace.prisma.sh",
  "clusterName": "test1",
  "isPrivate": true,
  "local": false,
  "service": "tessst",
  "shared": false,
  "stage": "dev",
  "workspaceSlug": "workspace",
}
`;

exports[`parseEndpoint shared url 1`] = `
Object {
  "clusterBaseUrl": "https://eu1.prisma.sh",
  "clusterName": "prisma-eu1",
  "isPrivate": false,
  "local": false,
  "service": "tessst",
  "shared": true,
  "stage": "dev",
  "workspaceSlug": "workspace-name",
}
`;

exports[`parseEndpoint work for minimal docker url 1`] = `
Object {
  "clusterBaseUrl": "http://prisma:4466",
  "clusterName": "default",
  "isPrivate": false,
  "local": true,
  "service": "default",
  "shared": false,
  "stage": "default",
  "workspaceSlug": null,
}
`;

exports[`parseEndpoint work for minimal url 1`] = `
Object {
  "clusterBaseUrl": "http://localhost:4466",
  "clusterName": "local",
  "isPrivate": false,
  "local": true,
  "service": "default",
  "shared": false,
  "stage": "default",
  "workspaceSlug": null,
}
`;

exports[`parseEndpoint work for url with service 1`] = `
Object {
  "clusterBaseUrl": "http://localhost:4466",
  "clusterName": "local",
  "isPrivate": false,
  "local": true,
  "service": "service-name",
  "shared": false,
  "stage": "default",
  "workspaceSlug": null,
}
`;

exports[`parseEndpoint work for url with service and stage 1`] = `
Object {
  "clusterBaseUrl": "http://localhost:4466",
  "clusterName": "local",
  "isPrivate": false,
  "local": true,
  "service": "service-name",
  "shared": false,
  "stage": "stage",
  "workspaceSlug": null,
}
`;
